--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@ h1{
     line-height: 29px;
 }
 .reset{
-    display: inherit;
-    float: right;
+    display: inline;
+    /* float: right; */
     position: relative;
     color: #2bd434;
-    right: 1081px;
-    bottom: 21px;
+    right: -59px;
+    bottom: 52px;
 }
 .stop{
     display: none;
@@ -116,4 +116,8 @@ p{
 }
 .volumeSlider::-webkit-slider-thumb{
     cursor: pointer;
+}
+.metronome{
+    position: relative;
+    width: 500px;
 }
